[gd_scene load_steps=9 format=3 uid="uid://bpt5ci3btxtqh"]

[ext_resource type="FontFile" uid="uid://plk2ssnqqgfy" path="res://Resources/font/MotionControl-Bold.otf" id="1_83jm5"]
[ext_resource type="Script" path="res://Scripts/meta_intro.gd" id="1_uougd"]
[ext_resource type="Texture2D" uid="uid://cw56pjxjkskjj" path="res://icon.svg" id="2_5iwqb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yo785"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_ldl0i"]
resource_name = "Game_by"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/AGameBy/Name:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.63333, 4.9, 7.86667),
"transitions": PackedFloat32Array(1, 1, 1, 0.133972),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rxiy8"]
resource_name = "Powered_by"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/PoweredBy/TextureRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 3.06667, 4.86667, 7.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/PoweredBy/PoweredByText:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 2.93333, 4.76667, 7.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_tqprp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/AGameBy/Name:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/PoweredBy/TextureRect:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/PoweredBy/PoweredByText:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8oswu"]
_data = {
"Game_by": SubResource("Animation_ldl0i"),
"Powered_by": SubResource("Animation_rxiy8"),
"RESET": SubResource("Animation_tqprp")
}

[node name="MetaIntro" type="Node3D"]
script = ExtResource("1_uougd")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AGameBy" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1111.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yo785")

[node name="Name" type="Label" parent="Control/AGameBy"]
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -15.5
offset_right = 95.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_83jm5")
theme_override_font_sizes/font_size = 30
text = "A PorthorisNaagu Game"

[node name="PoweredBy" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1111.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yo785")

[node name="TextureRect" type="TextureRect" parent="Control/PoweredBy"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.5
offset_top = -182.0
offset_right = 152.5
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5iwqb")

[node name="PoweredByText" type="Label" parent="Control/PoweredBy"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.5
offset_top = 147.0
offset_right = 88.5
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_83jm5")
theme_override_font_sizes/font_size = 30
text = "Powered by Godot"

[node name="MetaIntroAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8oswu")
}

[connection signal="animation_finished" from="MetaIntroAnimation" to="." method="_on_meta_intro_animation_animation_finished"]
